[package]
name = "nom_bencode"
version = "0.1.2"
authors = ["Edgar <git@edgarluque.com>"]
description = "A bencode parser written with nom."
repository = "https://github.com/edg-l/nom-bencode/"
license = "MIT OR Apache-2.0"
keywords = ["bencode", "parser", "nom"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/nom_bencode"
readme = "README.md"
edition = "2021"

exclude = ["./test-assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "bencode_bench"
harness = false
